Update with documentation People
