# app/Http/Resources/PeopleResource.php
@@ -4,6 +4,16 @@ namespace App\Http\Resources;
 
 use Illuminate\Http\Resources\Json\JsonResource;
 
+/**
+ * @OA\Schema(
+ *     schema="PeopleResource",
+ *     @OA\Property(property="id", type="integer", example=1),
+ *     @OA\Property(property="name", type="string", example="Juan Pérez"),
+ *     @OA\Property(property="email", type="string", example="juan@example.com"),
+ *     @OA\Property(property="phone", type="string", example="3101234567")
+ * )
+ */
+
 class PeopleResource extends JsonResource
 {
     /**
